--- a/index.html
+++ b/index.html
@@ -61,11 +61,11 @@
             <div class="infotext">Lipcare</div>
         </div>
         <div class="img">
-            <img src="bg removed/sunscreen-testimg.jpg" alt="Sunscreen">
+            <img src="images/sunscreen-new.jpg" alt="Sunscreen">
             <div class="infotext">Sunscreen</div>
         </div>
         <div class="img">
-            <img src="bg removed/toner-testimg.jpg" alt="Lip Care">
+            <img src="images/toner-new.jpg" alt="Lip Care">
             <div class="infotext">Toner</div>
         </div>
         <div class="img">
