--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     </div>
 
     <div class="categoryline">
-        <h2><span>Shop By Category</span></h2>
+        <div class="separator">Shop By Category</div>
     </div>
 
     <div class="categoryimg">
