changes made in the "category" section alignment error

--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
         <img src="images/mainlongimg-final.jpg" alt="Main Image">
     </div>
 
-    <div class="categoryline">
-        <div class="separator">Shop By Category</div>
-    </div>
+     
+    <div class="separator"><span>Shop By Category</span></div>
+     
 
     <div class="categoryimg">
         <div class="img">
